<resources>
    <string name="app_name">Тропин Леонид</string>
    <string name="menu_my_profile">Мой профиль</string>
    <string name="menu_my_team">Моя команда</string>
    <string name="user_phone">Мобильный телефон</string>
    <string name="user_email">E-mail</string>
    <string name="user_vk_profile">Профиль в VK</string>
    <string name="user_github_repository">Репозиторий</string>
    <string name="user_info">О себе</string>

    <string name="rating">Рейтинг</string>
    <string name="code_lines">Написано строк кода</string>
    <string name="projects">Проектов</string>

    <string name="change_photo">Изменить фотографию профиля</string>
    <string name="user_profile.dialog.gallery">Загрузить из галереи</string>
    <string name="user_profile.dialog.camera">Сделать снимок</string>
    <string name="user_profile.dialog.cancel">Отмена</string>
    <string name="user_profile.chose.message">Выберите фото</string>

    <string name="login_page.title">Войти</string>
    <string name="login_page.email">E-mail</string>
    <string name="login_page.password">Пароль</string>
    <string name="login_page.button">Войти</string>
    <string name="login_page.forget_password">Забыли пароль?</string>

    <string name="validation.email">Email is not correct</string>
    <string name="validation.phone">Phone is not correct</string>
    <string name="error.wrongLoginPassword">Неверный логин или пароль</string>
    <string name="error.someError">It\'s a trap!</string>
    <string name="full_name_hint">Фамилия Имя</string>
    <string name="more_info_btn">Просмотр</string>
</resources>
