<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            style="@style/bodyHeader"
            android:id="@+id/body_header">
            <LinearLayout
                style="@style/bodyHeaderCell.side">
                <android.support.v7.widget.AppCompatTextView
                    style="@style/headerText.field"
                    android:id="@+id/userRating"/>
                <android.support.v7.widget.AppCompatTextView
                    style="@style/headerText"
                    android:text="@string/rating"/>
            </LinearLayout>
            <View
                style="@style/verticalDivider">
            </View>
            <LinearLayout
                style="@style/bodyHeaderCell.center"
                >
                <android.support.v7.widget.AppCompatTextView
                    style="@style/headerText.field"
                    android:id="@+id/userCodeLines"/>
                <android.support.v7.widget.AppCompatTextView
                    style="@style/headerText"
                    android:text="@string/code_lines"/>
            </LinearLayout>
            <View
                style="@style/verticalDivider">
            </View>
            <LinearLayout
                style="@style/bodyHeaderCell.side">
                <android.support.v7.widget.AppCompatTextView
                    style="@style/headerText.field"
                    android:id="@+id/userProjects"/>
                <android.support.v7.widget.AppCompatTextView
                    style="@style/headerText"
                    android:text="@string/projects"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            style="@style/editTextLine">
            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_call_black_24dp"/>
            <LinearLayout
                style="@style/editTextContainer.noWrap">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        style="@style/editTextField.disabled"
                        android:id="@+id/userPhoneNumber"
                        android:inputType="phone"
                        android:hint="@string/user_phone"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                style="@style/icon.right"
                android:id="@+id/userPhoneButton"
                android:src="@drawable/ic_phone_in_talk_black_24dp"/>
        </LinearLayout>
        <View
            style="@style/horizontalDivider">
        </View>
        <LinearLayout
            style="@style/editTextLine">
            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_mail_black_24dp"/>
            <LinearLayout
                style="@style/editTextContainer.noWrap">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        style="@style/editTextField.disabled"
                        android:id="@+id/userEmail"
                        android:inputType="textEmailAddress"
                        android:hint="@string/user_email"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                style="@style/icon.right"
                android:id="@+id/userEmailButton"
                android:src="@drawable/ic_send_black_24dp"/>
        </LinearLayout>
        <View
            style="@style/horizontalDivider">
        </View>
        <LinearLayout
            style="@style/editTextLine">
            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_vk_circle_24dp"/>
            <LinearLayout
                style="@style/editTextContainer.noWrap">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        style="@style/editTextField.disabled"
                        android:id="@+id/userVkProfile"
                        android:inputType="textUri"
                        android:hint="@string/user_vk_profile"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                style="@style/icon.right"
                android:id="@+id/userVkButton"
                android:src="@drawable/ic_visibility_black_24dp"/>
        </LinearLayout>
        <View
            style="@style/horizontalDivider">
        </View>
        <LinearLayout
            style="@style/editTextLine">
            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_github_circle_24dp"/>
            <LinearLayout
                style="@style/editTextContainer.noWrap">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        style="@style/editTextField.disabled"
                        android:id="@+id/userGithubRepository"
                        android:inputType="textUri"
                        android:hint="@string/user_github_repository"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                style="@style/icon.right"
                android:id="@+id/userGitButton"
                android:src="@drawable/ic_visibility_black_24dp"/>
        </LinearLayout>
        <View
            style="@style/horizontalDivider">
        </View>
        <LinearLayout
            style="@style/editTextLine">
            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_account_circle_black_24dp"/>
            <LinearLayout
                style="@style/editTextContainer.wrap">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        style="@style/editTextField.disabled"
                        android:id="@+id/userBio"
                        android:inputType="none"
                        android:hint="@string/user_info"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
