<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/corner_radius_2"
    android:layout_marginTop="@dimen/spacing_smallest_8"
    app:cardBackgroundColor="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.softdesign.devintensive.ui.views.AspectRatioImageView
                android:id="@+id/user_photo_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/user_bg"
                android:scaleType="centerCrop"
                app:aspect_ratio="1.78"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_full_name_txt"
                android:text="@string/full_name_hint"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-medium"
                android:textSize="@dimen/font_large_24"
                android:paddingLeft="@dimen/spacing_smaller_16"
                android:paddingRight="@dimen/spacing_smaller_16"
                android:paddingBottom="@dimen/spacing_small_24"
                android:layout_gravity="bottom"/>

        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_large_72"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_weight="0.25">
                <TextView
                    android:id="@+id/rating_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="@dimen/font_medial_20"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating"
                    android:fontFamily="sans-serif"
                    android:textSize="@dimen/font_medium_14"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_weight="0.5">
                <TextView
                    android:id="@+id/code_lines_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="@dimen/font_medial_20"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/code_lines"
                    android:fontFamily="sans-serif"
                    android:textSize="@dimen/font_medium_14"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_weight="0.25">
                <TextView
                    android:id="@+id/projects_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="@dimen/font_medial_20"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/projects"
                    android:fontFamily="sans-serif"
                    android:textSize="@dimen/font_medium_14"
                    android:textColor="@color/black"/>
            </LinearLayout>

        </LinearLayout>
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bio_txt"
            android:textColor="@color/grey_light"
            android:maxLines="3"
            android:paddingRight="@dimen/spacing_smaller_16"
            android:paddingLeft="@dimen/spacing_smaller_16"
            android:fontFamily="sans-serif"
            android:textSize="@dimen/font_medium_14"/>
        
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_light"
            android:layout_marginTop="@dimen/spacing_smaller_16"
            android:layout_marginBottom="@dimen/spacing_smallest_8"/>

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/more_info_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more_info_btn"
            android:textColor="@color/color_accent"
            android:paddingLeft="@dimen/spacing_smaller_16"
            android:paddingRight="@dimen/spacing_smaller_16"/>

    </LinearLayout>

</android.support.v7.widget.CardView>